--- a/src/layout/UserInfo.css
+++ b/src/layout/UserInfo.css
@@ -3,3 +3,8 @@
     min-width: 180px;
     max-width: 300px;
 }
+.channelDisplay {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
