--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
   overflow: wrap;
+  width: 600px;
   
 }
 .message-sent {
@@ -31,6 +32,7 @@ img {
 
 .message-container.message-owner{
     justify-content: flex-end;
+    
 }
 .text-image-container{
     display: flex;
