--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 * {
   margin: 0;
 }
-
-
-
-
+html {
+  height: 100vh;
+  background-color: #FFDEE9;
+  background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+  
+}
