--- a/src/layout/UserInfo.css
+++ b/src/layout/UserInfo.css
@@ -1,10 +1,36 @@
-.userInfo-container{
-    flex: 1;
-    min-width: 180px;
-    max-width: 300px;
+.userInfo-container {
+  flex: 1;
+  min-width: 180px;
+  max-width: 300px;
 }
 .channelDisplay {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.favorite-header {
+  display: flex;
+  align-self: center;
+  margin: 5px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+.icon-channel-wrapper {
+  display: flex;
+  align-self: center;
+}
+
+.channel-header {
+  display: flex;
+  align-self: center;
+  justify-content: space-between;
+  margin-top: 15px;
+
+}
+
+.user-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
