--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -10,9 +10,12 @@
   justify-content: space-evenly;
   align-items: center;
   z-index: 100;
+  background-color: white;
 }
 
 .modal >input{
     width: 150px;
-    height: 50px
+    height: 30px !important;
+    background-color: lightgrey;
+    padding: 0;
 }
