--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+h2,
+h3,
+h4,
+h5,
+h6, p {
+  color: #151515;
 }
