--- a/src/layout/UserInfo.css
+++ b/src/layout/UserInfo.css
@@ -4,10 +4,9 @@
   max-width: 300px;
   background: linear-gradient(
     to right bottom,
-    rgba(255, 255, 255, 0.486),
+    rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.3)
   );
-
   border-top-left-radius: 2rem;
   border-bottom-left-radius: 2rem;
 }
@@ -40,9 +39,28 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: column;
 }
 .icon {
   color: linear-gradient(to right top, #65dfc9, #6cdbeb) !important;
 }
-ul {
+.userInfo-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.signout{
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  top: -15px;
+  color:grey
 }
