--- a/src/components/ChatMessage.css
+++ b/src/components/ChatMessage.css
@@ -3,17 +3,17 @@
   flex-direction: row;
   justify-content: flex-start;
   overflow: wrap;
-  width: 600px;
-  
+  width: 570px;
 }
 .message-sent {
   display: block;
-  background-color: bisque;
+  background-color: beige;
   padding: 5px;
   border-radius: 10px;
   margin: 5px 2px;
   max-width: 300px;
   word-wrap: break-word;
+  opacity: 0.9;
 }
 img {
   display: block;
@@ -22,24 +22,21 @@ img {
   object-fit: cover;
   margin-top: 7px;
   margin-left: 3px;
-  margin-right: 3px
+  margin-right: 3px;
 }
 .user-avatar {
   width: 20px;
   border-radius: 50%;
 }
 
-
-.message-container.message-owner{
-    justify-content: flex-end;
-    
+.message-container.message-owner {
+  justify-content: flex-end;
 }
-.text-image-container{
-    display: flex;
-    flex-direction: row-reverse;   
-   
+.text-image-container {
+  display: flex;
+  flex-direction: row-reverse;
 }
-.text-image-container.message-owner{
-    display: flex;
-    flex-direction: row;
+.text-image-container.message-owner {
+  display: flex;
+  flex-direction: row;
 }
