--- a/src/layout/UserInfo.css
+++ b/src/layout/UserInfo.css
@@ -55,12 +55,48 @@
   height: 100px;
   border-radius: 50%;
 }
-.signout{
+.signout {
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   top: -15px;
-  color:grey
+  color: grey;
+  opacity: 0.7;
+}
+
+.channelList {
+  height: 350px;
+  overflow: hidden;
+}
+/* .channelList::-webkit-scrollbar {
+  display: none !important;
+} */
+.channelList{
+  overflow-y: scroll;
+}
+.channelList::-webkit-scrollbar-track
+{
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 5px;
+}
+
+.channelList::-webkit-scrollbar
+{
+	width: 5px;
+  background-color: #F5F5F5;
+  
+}
+
+.channelList::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgba(122,153,217,0.5)),
+									   color-stop(0.72, rgba(73,125,189, 0.5)),
+									   color-stop(0.86, rgba(28,58,148,0.5)));
 }
