--- a/src/layout/UserInfo.css
+++ b/src/layout/UserInfo.css
@@ -79,7 +79,7 @@
 .channelList::-webkit-scrollbar-track
 {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+	background-color: rgba(151, 255, 251, 0.4);
 	border-radius: 5px;
 }
 
